--- a/create.html
+++ b/create.html
@@ -82,5 +82,9 @@
       }
     });
   </script>
+
+<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+
 </body>
 </html>
