Updated minor content and fixed encoding/visual tweaks

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
         </ul>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm" type="button">🌙 Dark</button>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm" type="button"> Dark</button>
       </div>
     </div>
   </nav>
@@ -45,9 +45,9 @@
             <div class="card-body">
               <h5 class="card-title">Team Members</h5>
               <ul class="list-unstyled small mb-0">
-                <li><strong>Mohamed Faisal Sindhi</strong> — Role: Frontend Developer — Contributions: Built all HTML pages and overall structure of the US State Data Dashboard website.</li>
-                <li><strong>Hongxu Yang</strong> — Role: UI/UX & Styling — Contributions: Designed and implemented the CSS theme, layout responsiveness, and color scheme for the project.</li>
-                <li><strong>Jonathan James</strong> — Role: JavaScript Developer — Contributions: Developed all JavaScript functionalities including CRUD page interactions and Chart.js visualizations.</li>
+                <li><strong>Mohamed Faisal Sindhi</strong> - Role: Frontend Developer - Contributions: Built all HTML pages and overall structure of the US State Data Dashboard website.</li>
+                <li><strong>Hongxu Yang</strong> - Role: UI/UX & Styling - Contributions: Designed and implemented the CSS theme, layout responsiveness, and color scheme for the project.</li>
+                <li><strong>Jonathan James</strong> - Role: JavaScript Developer - Contributions: Developed all JavaScript functionalities including CRUD page interactions and Chart.js visualizations.</li>
               </ul>
             </div>
           </div>
@@ -72,7 +72,7 @@
           <h2 class="h5 mb-3">Logical Data Model</h2>
           <p class="text-body-secondary">
             The logical data model represents two one-to-many relationships:
-            <strong>Region → State</strong> and <strong>State → City</strong>.
+            <strong>Region - State</strong> and <strong>State - City</strong>.
             Primary keys (PK) and foreign keys (FK) are clearly labeled to show
             data hierarchy and referential integrity.
           </p>
