--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
         </ul>
         <div class="d-flex gap-2">
-          <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+          <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
           <a class="btn btn-primary btn-sm" href="read.html">Open Dashboard</a>
         </div>
       </div>
@@ -58,11 +58,11 @@
           <div class="glass-card p-4 rounded-4 shadow">
             <h5 class="mb-3">Key Features</h5>
             <ul class="list-unstyled small">
-              <li>• Responsive UI (Bootstrap 5)</li>
-              <li>• Functional CRUD (localStorage)</li>
-              <li>• Chart.js v4 interactive charts</li>
-              <li>• Dark mode theme</li>
-              <li>• Botpress chatbot integration</li>
+              <li> Responsive UI (Bootstrap 5)</li>
+              <li> Functional CRUD (localStorage)</li>
+              <li> Chart.js v4 interactive charts</li>
+              <li> Dark mode theme</li>
+              <li> Botpress chatbot integration</li>
             </ul>
           </div>
         </div>
@@ -78,7 +78,7 @@
           <div class="card h-100 rounded-4 shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Domain</h5>
-              <p class="card-text">US states with attributes like population, GDP, area, and capital — perfect for analytics.</p>
+              <p class="card-text">US states with attributes like population, GDP, area, and capital - perfect for analytics.</p>
             </div>
           </div>
         </div>
