--- a/mybot.html
+++ b/mybot.html
@@ -21,7 +21,7 @@
         <div class="d-flex gap-2">
           <a class="btn btn-outline-secondary btn-sm" href="index.html" aria-label="Go to Home page">Home</a>
           <a class="btn btn-outline-secondary btn-sm" href="data.html" aria-label="Open Charts page">Charts</a>
-          <button id="toggleTheme" class="btn btn-outline-secondary btn-sm" type="button" aria-pressed="false">🌙 Dark</button>
+          <button id="toggleTheme" class="btn btn-outline-secondary btn-sm" type="button" aria-pressed="false"> Dark</button>
         </div>
       </nav>
     </div>
