--- a/read.html
+++ b/read.html
@@ -16,7 +16,7 @@
         <a class="btn btn-outline-secondary btn-sm" href="create.html">Create</a>
         <a class="btn btn-outline-secondary btn-sm" href="update.html">Update</a>
         <a class="btn btn-outline-secondary btn-sm" href="delete.html">Delete</a>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
       </div>
     </div>
 
