--- a/create.html
+++ b/create.html
@@ -14,7 +14,7 @@
       <div class="d-flex gap-2">
         <a class="btn btn-outline-secondary btn-sm" href="index.html">Home</a>
         <a class="btn btn-outline-secondary btn-sm" href="read.html">Read</a>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
       </div>
     </div>
 
