--- a/data.html
+++ b/data.html
@@ -29,7 +29,7 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
         </ul>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
       </div>
     </div>
   </nav>
