--- a/delete.html
+++ b/delete.html
@@ -15,7 +15,7 @@
         <a class="btn btn-outline-secondary btn-sm" href="index.html">Home</a>
         <a class="btn btn-outline-secondary btn-sm" href="read.html">Read</a>
         <a class="btn btn-outline-secondary btn-sm" href="create.html">Create</a>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
       </div>
     </div>
 
