Fix formatting in mybot.html list items

--- a/mybot.html
+++ b/mybot.html
@@ -38,9 +38,9 @@
           population, GDP, and area.
         </p>
         <ul class="small mb-0">
-          <li>Dataset: 10–12 states with columns — <code>State_ID</code>, <code>State_Name</code>, <code>Capital</code>, <code>Region</code>, <code>Population_Million</code>, <code>GDP_Billion</code>, <code>Area_sqmi</code>.</li>
-          <li>Workflow: <em>Start</em> → <em>Autonomous</em> with <em>Search Knowledge</em> enabled.</li>
-          <li>Try: “Which state has the largest GDP?”, “What is the capital of Texas?”, “Which region is Florida in?”</li>
+          <li>Dataset: 10-12 states with columns - <code>State_ID</code>, <code>State_Name</code>, <code>Capital</code>, <code>Region</code>, <code>Population_Million</code>, <code>GDP_Billion</code>, <code>Area_sqmi</code>.</li>
+          <li>Workflow: <em>Start</em> - <em>Autonomous</em> with <em>Search Knowledge</em> enabled.</li>
+          <li>Try: "Which state has the largest GDP?", "What is the capital of Texas?", "Which region is Florida in?"</li>
         </ul>
       </div>
     </section>
