--- a/about.html
+++ b/about.html
@@ -2,106 +2,131 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us • US States</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>About Us & ERD • US States Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
-  <meta name="description" content="Team information and the logical data model for the US State Data Dashboard project.">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm">
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample" aria-label="Toggle navigation">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav7">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarsExample">
+      <div class="collapse navbar-collapse" id="mainNav7">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="data.html">Data Visualizations</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">CRUD</a>
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">CRUD</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="read.html">Read</a></li>
               <li><a class="dropdown-item" href="update.html">Update</a></li>
               <li><a class="dropdown-item" href="delete.html">Delete</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About / ERD</a></li>
         </ul>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm" type="button"> Dark</button>
+
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
       </div>
     </div>
   </nav>
 
   <main class="py-5">
     <div class="container">
-      <h2 class="mb-4">Team & Project</h2>
+
+      <h2 class="h4 fw-bold mb-4">Team & Project</h2>
 
       <div class="row g-4">
         <div class="col-md-6">
-          <div class="card rounded-4 shadow-sm h-100">
+          <div class="card rounded-4 h-100">
             <div class="card-body">
-              <h5 class="card-title">Team Members</h5>
+              <div class="section-heading mb-2">Team Members</div>
               <ul class="list-unstyled small mb-0">
-                <li><strong>Mohamed Faisal Sindhi</strong> - Role: Frontend Developer - Contributions: Built all HTML pages and overall structure of the US State Data Dashboard website.</li>
-                <li><strong>Hongxu Yang</strong> - Role: UI/UX & Styling - Contributions: Designed and implemented the CSS theme, layout responsiveness, and color scheme for the project.</li>
-                <li><strong>Jonathan James</strong> - Role: JavaScript Developer - Contributions: Developed all JavaScript functionalities including CRUD page interactions and Chart.js visualizations.</li>
+                <li><strong>Mohamed Faisal Sindhi</strong> — Frontend & Integration  
+                  <div class="small-muted">Built HTML structure, deployment, chatbot integration, hosting.</div>
+                </li>
+                <li class="mt-2"><strong>Hongxu Yang</strong> — UI/UX & Styling  
+                  <div class="small-muted">Dark mode, responsive layout, visual design, ERD diagram.</div>
+                </li>
+                <li class="mt-2"><strong>Jonathan James</strong> — JavaScript & Data  
+                  <div class="small-muted">CRUD logic, Chart.js visualizations, localStorage persistence.</div>
+                </li>
               </ul>
             </div>
           </div>
-        </div>
+        </div><!-- col -->
 
         <div class="col-md-6">
-          <div class="card rounded-4 shadow-sm h-100">
+          <div class="card rounded-4 h-100">
             <div class="card-body">
-              <h5 class="card-title">GitHub Repository</h5>
-              <p class="small">Source code and commit history:</p>
-              <a class="btn btn-primary btn-sm" target="_blank" rel="noopener"
-                 href="https://github.com/MdFaisalS2025/us-states-dashboard">Open Repo</a>
+              <div class="section-heading mb-2">GitHub Repository</div>
+              <p class="small text-secondary mb-3">
+                Our source code and commit history are documented here.
+                The README also explains our architecture (MVC), API usage,
+                and data persistence through localStorage.
+              </p>
+              <a class="btn btn-primary btn-sm"
+                 target="_blank"
+                 rel="noopener"
+                 href="https://github.com/MdFaisalS2025/us-states-dashboard">
+                Open GitHub Repo
+              </a>
             </div>
           </div>
-        </div>
-      </div>
+        </div><!-- col -->
+      </div><!-- row -->
 
       <hr class="my-5" />
 
-      <section class="card rounded-4 shadow-sm my-4">
-        <div class="card-body">
-          <h2 class="h5 mb-3">Logical Data Model</h2>
-          <p class="text-body-secondary">
-            The logical data model represents two one-to-many relationships:
-            <strong>Region - State</strong> and <strong>State - City</strong>.
-            Primary keys (PK) and foreign keys (FK) are clearly labeled to show
-            data hierarchy and referential integrity.
-          </p>
-          <img src="assets/logical_data_model_v2.png"
-               alt="Logical Data Model for US State Data Dashboard showing Region-State-City one-to-many relationships with PK and FK labels"
-               class="img-fluid rounded-4 shadow-sm border border-1" />
-          <p class="small text-body-secondary mt-3">
-            Each Region can have multiple States, and each State can have multiple Cities.
-            This structure supports future dynamic CRUD operations and API integration
-            for hierarchical data visualization.
-          </p>
-        </div>
-      </section>
+      <h3 class="h5 fw-bold mb-3">Logical / Data Model (ERD)</h3>
+      <p class="small-muted mb-4">
+        Our application models two main one-to-many relationships: 
+        <strong>Region → State</strong> and <strong>State → City</strong>.
+        In production, this would live in a database. In our prototype, the <code>State</code>
+        records are stored in <code>localStorage</code> and drive CRUD + charts.
+      </p>
 
-    </div>
+      <div class="card rounded-4 shadow-sm p-3 overflow-auto mb-3">
+        <img src="assets/logical_data_model_v3.png" alt="ERD Diagram" style="max-width:100%;height:auto;border-radius:1rem;">
+      </div>
+
+      <div class="small-muted">
+        <strong>Region</strong> (Region_ID PK) → <strong>State</strong> (State_ID PK, Region_ID FK) → <strong>City</strong> (City_ID PK, State_ID FK). <br>
+        We persist <code>State</code> objects locally (id, name, region, capital, population, gdp, area, citiesCount).
+        That same data powers our table view, our charts, and even the chatbot knowledge base.
+      </div>
+
+    </div><!-- container -->
   </main>
 
   <footer class="py-4 border-top">
-    <div class="container d-flex justify-content-between align-items-center small">
-      <span>© 2025 US State Data Dashboard</span>
-      <a href="index.html">Back to Home</a>
+    <div class="container d-flex flex-wrap justify-content-between align-items-center">
+      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
+      <div class="small-muted">
+        <a href="index.html">Home</a> •
+        <a href="data.html">Charts</a> •
+        <a href="read.html">Data Table</a>
+      </div>
     </div>
   </footer>
 
+  <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="assets/model.js"></script>
+  <script src="assets/controller.js"></script>
+  <script src="assets/charts.js"></script>
+  <script src="assets/api.js"></script>
   <script src="assets/app.js"></script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/YOUR-BOTPRESS-CONFIG.js" defer></script>
 </body>
 </html>
