--- a/data.html
+++ b/data.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Data Visualizations • US States</title>
+  <title>Data & Charts • US States</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
@@ -11,82 +11,29 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">US States</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarsExample">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="data.html">Data Visualizations</a></li>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item"><a class="nav-link active" href="data.html">Data & Charts</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">CRUD</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="read.html">Read</a></li>
-              <li><a class="dropdown-item" href="update.html">Update</a></li>
-              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
-            </ul>
-          </li>
           <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
         </ul>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
       </div>
     </div>
   </nav>
 
-  <main class="py-5">
-    <div class="container">
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="mb-0">Interactive Charts</h2>
-        <div class="d-flex gap-2">
-          <button class="btn btn-outline-primary btn-sm" id="refreshCharts">Refresh</button>
-          <a class="btn btn-primary btn-sm" href="read.html">Open Data Table</a>
-        </div>
-      </div>
-
-      <div class="row g-4">
-        <div class="col-lg-6">
-          <div class="card rounded-4 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Top 10 States by Population</h5>
-              <canvas id="barPop"></canvas>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="card rounded-4 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">GDP by Region (Share)</h5>
-              <canvas id="doughnutGDP"></canvas>
-            </div>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card rounded-4 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Example Trend: Florida vs Texas (GDP Over Years)</h5>
-              <canvas id="lineTrend"></canvas>
-            </div>
-          </div>
-        </div>
-      </div>
+  <main class="container py-5">
+    <h2 class="mb-4 text-center">Interactive Charts</h2>
+    <div class="row g-4">
+      <div class="col-md-6"><canvas id="chartPopulation"></canvas></div>
+      <div class="col-md-6"><canvas id="chartGDP"></canvas></div>
+      <div class="col-md-12"><canvas id="chartArea"></canvas></div>
     </div>
   </main>
 
-  <footer class="py-4 border-top">
-    <div class="container d-flex justify-content-between align-items-center small">
-      <span>© 2025 US State Data Dashboard</span>
-      <a href="index.html">Back to Home</a>
-    </div>
-  </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="assets/app.js"></script>
   <script src="assets/charts.js"></script>
-
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-
 </body>
 </html>
