--- a/delete.html
+++ b/delete.html
@@ -2,56 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Delete State • US States</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Delete State • US States Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-  <div class="container py-5">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="mb-0">Delete State</h2>
-      <div class="d-flex gap-2">
-        <a class="btn btn-outline-secondary btn-sm" href="index.html">Home</a>
-        <a class="btn btn-outline-secondary btn-sm" href="read.html">Read</a>
-        <a class="btn btn-outline-secondary btn-sm" href="create.html">Create</a>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav6">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNav6">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#">CRUD</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="create.html">Create</a></li>
+              <li><a class="dropdown-item" href="update.html">Update</a></li>
+              <li><a class="dropdown-item active" href="delete.html">Delete</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About / ERD</a></li>
+        </ul>
+
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
       </div>
     </div>
+  </nav>
 
-    <div class="card rounded-4 shadow-sm">
-      <div class="card-body">
-        <form id="deleteForm" class="row g-3">
-          <div class="col-md-3">
-            <label class="form-label">State ID</label>
-            <input type="text" class="form-control" id="id" maxlength="2" placeholder="e.g., FL" required />
+  <main class="py-5">
+    <div class="container" style="max-width:600px;">
+      <h2 class="h4 fw-bold mb-3">Delete State</h2>
+      <p class="small-muted mb-4">
+        Enter a State ID (2-letter code) and click Delete. This removes the record from localStorage.
+      </p>
+
+      <div class="card rounded-4 shadow-sm p-4">
+        <div class="row g-3 align-items-end">
+          <div class="col-md-6">
+            <label class="form-label small">State ID</label>
+            <input id="del_id" class="form-control form-control-sm" placeholder="CA">
           </div>
-          <div class="col-md-9 d-flex align-items-end">
-            <button class="btn btn-danger" type="submit">Delete</button>
-            <span class="ms-3 small text-body-secondary">This will permanently remove the record from your browser.</span>
+          <div class="col-md-6">
+            <button id="deleteBtn" class="btn btn-danger btn-sm w-100">Delete</button>
           </div>
-        </form>
+        </div>
+
+        <div class="d-flex gap-2 mt-4">
+          <a class="btn btn-outline-secondary btn-sm" href="read.html">Back to Table</a>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
 
+  <footer class="py-4 border-top">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center">
+      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
+      <div class="small-muted"><a href="read.html">View Data</a></div>
+    </div>
+  </footer>
+
+  <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="assets/model.js"></script>
+  <script src="assets/controller.js"></script>
+  <script src="assets/charts.js"></script>
+  <script src="assets/api.js"></script>
   <script src="assets/app.js"></script>
+
   <script>
-    document.getElementById('deleteForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const id = document.getElementById('id').value.trim().toUpperCase();
-      try {
-        deleteState(id);
-        alert('State deleted (if it existed).');
-      } catch (err) {
-        alert(err.message);
-      }
-    });
+    initDeletePage();
   </script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/YOUR-BOTPRESS-CONFIG.js" defer></script>
 </body>
 </html>
