--- a/index.html
+++ b/index.html
@@ -3,25 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>US State Data Dashboard</title>
+  <title>US States Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
-  <link rel="icon" type="image/png" href="assets/favicon.png" />
 </head>
-<body>
-  <!-- Navbar -->
+<body class="bg-gradient">
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">US States</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarsExample">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="data.html">Data Visualizations</a></li>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">CRUD</a>
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">CRUD</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="create.html">Create</a></li>
               <li><a class="dropdown-item" href="read.html">Read</a></li>
@@ -31,89 +26,27 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
         </ul>
-        <div class="d-flex gap-2">
-          <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
-          <a class="btn btn-primary btn-sm" href="read.html">Open Dashboard</a>
-        </div>
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
       </div>
     </div>
   </nav>
 
-  <!-- Hero -->
-  <header class="py-5 bg-gradient position-relative overflow-hidden">
-    <div class="container position-relative" style="z-index:1">
-      <div class="row align-items-center">
-        <div class="col-lg-7">
-          <h1 class="display-5 fw-bold mb-3">US State Data Dashboard</h1>
-          <p class="lead text-body-secondary">
-            Explore population, GDP, and geographic insights across all 50 US states.
-            Use CRUD pages to simulate data management and analyze insights through interactive charts.
-          </p>
-          <div class="d-flex gap-3 mt-3">
-            <a href="data.html" class="btn btn-primary btn-lg">View Charts</a>
-            <a href="create.html" class="btn btn-outline-primary btn-lg">Add State</a>
-          </div>
-        </div>
-        <div class="col-lg-5 d-none d-lg-block">
-          <div class="glass-card p-4 rounded-4 shadow">
-            <h5 class="mb-3">Key Features</h5>
-            <ul class="list-unstyled small">
-              <li> Responsive UI (Bootstrap 5)</li>
-              <li> Functional CRUD (localStorage)</li>
-              <li> Chart.js v4 interactive charts</li>
-              <li> Dark mode theme</li>
-              <li> Botpress chatbot integration</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="hero-blob"></div>
+  <header class="container py-5 text-center">
+    <h1 class="fw-bold mb-3">U.S. States Data Dashboard</h1>
+    <p class="text-muted lead">Explore population, GDP, and more with live API insights and full CRUD functionality.</p>
+    <a href="data.html" class="btn btn-primary btn-lg mt-3">View Data Visualizations</a>
   </header>
 
-  <section class="py-5">
-    <div class="container">
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card h-100 rounded-4 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Domain</h5>
-              <p class="card-text">US states with attributes like population, GDP, area, and capital - perfect for analytics.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100 rounded-4 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">CRUD Workflow</h5>
-              <p class="card-text">Create, read, update, and delete state entries. All changes persist in your browser.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100 rounded-4 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Interactive Charts</h5>
-              <p class="card-text">Three polished charts powered by Chart.js with tooltips, legends, and animations.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <div class="container my-5" id="apiInsightBox"></div>
 
-  <footer class="py-4 border-top">
-    <div class="container d-flex justify-content-between align-items-center small">
-      <span>© 2025 US State Data Dashboard</span>
-      <a href="https://github.com/YOUR_GITHUB_USERNAME/us-states-dashboard" target="_blank" rel="noopener">GitHub Repo</a>
+  <footer class="py-4 border-top mt-5">
+    <div class="container text-center small">
+      © 2025 US States Dashboard | Built with ❤️ by Faisal, Hongxu, & Jonathan
     </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/app.js"></script>
-
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-
+  <script src="assets/api.js"></script>
 </body>
 </html>
