--- a/mybot.html
+++ b/mybot.html
@@ -2,62 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chatbot • US States</title>
-
-  <!-- Bootstrap + your styles -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>StateBot Chat • US States Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
-
-  <!-- Accessibility / PWA niceties -->
-  <meta name="theme-color" content="#0d6efd">
-  <meta name="description" content="StateBot answers questions about U.S. states using a Botpress table-backed knowledge base." />
 </head>
 <body>
-  <header class="container py-5">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="h3 mb-0" id="page-title">StateBot (Botpress)</h1>
-      <nav aria-label="Utility">
-        <div class="d-flex gap-2">
-          <a class="btn btn-outline-secondary btn-sm" href="index.html" aria-label="Go to Home page">Home</a>
-          <a class="btn btn-outline-secondary btn-sm" href="data.html" aria-label="Open Charts page">Charts</a>
-          <button id="toggleTheme" class="btn btn-outline-secondary btn-sm" type="button" aria-pressed="false"> Dark</button>
-        </div>
-      </nav>
-    </div>
-  </header>
 
-  <main class="container pb-5" aria-labelledby="page-title">
-    <section class="card rounded-4 shadow-sm">
-      <div class="card-body">
-        <h2 class="h5">About this bot</h2>
-        <p class="text-body-secondary mb-2">
-          <strong>StateBot</strong> is powered by a Botpress <em>Table</em> and <em>Knowledge Base</em>.
-          It can answer questions about selected U.S. states, including
-          <span class="text-nowrap">capital</span>, <span class="text-nowrap">region</span>,
-          population, GDP, and area.
-        </p>
-        <ul class="small mb-0">
-          <li>Dataset: 10-12 states with columns - <code>State_ID</code>, <code>State_Name</code>, <code>Capital</code>, <code>Region</code>, <code>Population_Million</code>, <code>GDP_Billion</code>, <code>Area_sqmi</code>.</li>
-          <li>Workflow: <em>Start</em> - <em>Autonomous</em> with <em>Search Knowledge</em> enabled.</li>
-          <li>Try: "Which state has the largest GDP?", "What is the capital of Texas?", "Which region is Florida in?"</li>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav8">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav8">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">CRUD</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="create.html">Create</a></li>
+              <li><a class="dropdown-item" href="update.html">Update</a></li>
+              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link active" href="mybot.html">Chatbot</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About / ERD</a></li>
         </ul>
+
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
       </div>
-    </section>
+    </div>
+  </nav>
+
+  <main class="py-5">
+    <div class="container" style="max-width:800px;">
+      <div class="card rounded-4 shadow-sm">
+        <div class="card-body">
+          <h2 class="h5 fw-bold mb-3">StateBot (Botpress)</h2>
+          <p class="small text-secondary mb-4">
+            StateBot can answer questions about U.S. states in our dataset.
+            It uses a Botpress Table with fields like State ID, Name, Region, Capital,
+            Population, GDP, and Area. The bot workflow goes from Start → Autonomous
+            with Search Knowledge enabled, and it is embedded directly into this page.
+          </p>
+
+          <div class="small-muted mb-4">
+            Example questions you can ask:
+            <ul class="small mb-2">
+              <li>What is the capital of Texas?</li>
+              <li>Which state has the highest GDP?</li>
+              <li>Which region is Florida in?</li>
+            </ul>
+          </div>
+
+          <p class="small-muted">
+            The floating chat bubble (bottom right) is live and connected to Botpress.
+          </p>
+        </div>
+      </div>
+    </div>
   </main>
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-  <!-- Bootstrap bundle + your app scripts -->
+
+  <footer class="py-4 border-top">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center">
+      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
+      <div class="small-muted">
+        <a href="index.html">Home</a> •
+        <a href="read.html">Data Table</a> •
+        <a href="about.html">Team & ERD</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="assets/model.js"></script>
+  <script src="assets/controller.js"></script>
+  <script src="assets/charts.js"></script>
+  <script src="assets/api.js"></script>
   <script src="assets/app.js"></script>
 
-  <!-- Fallback for users with JS disabled -->
-  <noscript>
-    <div class="container py-3">
-      <div class="alert alert-warning rounded-4" role="alert">
-        JavaScript is disabled, so the chatbot cannot load. Please enable JavaScript to use StateBot.
-      </div>
-    </div>
-  </noscript>
+<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
+
+
+
