--- a/read.html
+++ b/read.html
@@ -2,124 +2,104 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Read States • US States</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>US States Dashboard • Data Table (Read)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-  <div class="container py-5">
-    <div class="d-flex flex-wrap gap-2 justify-content-between align-items-center mb-4">
-      <h2 class="mb-0">State Records</h2>
-      <div class="d-flex gap-2">
-        <a class="btn btn-outline-secondary btn-sm" href="index.html">Home</a>
-        <a class="btn btn-outline-secondary btn-sm" href="create.html">Create</a>
-        <a class="btn btn-outline-secondary btn-sm" href="update.html">Update</a>
-        <a class="btn btn-outline-secondary btn-sm" href="delete.html">Delete</a>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm"> Dark</button>
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav3">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav3">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+          <li class="nav-item"><a class="nav-link active" href="read.html">Data Table</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">CRUD</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="create.html">Create</a></li>
+              <li><a class="dropdown-item" href="update.html">Update</a></li>
+              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About / ERD</a></li>
+        </ul>
+
+        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
       </div>
     </div>
+  </nav>
 
-    <div class="card rounded-4 shadow-sm mb-3">
-      <div class="card-body">
-        <div class="row g-3 align-items-end">
-          <div class="col-md-4">
-            <label class="form-label">Search by Name/Capital</label>
-            <input id="search" type="text" class="form-control" placeholder="e.g., Florida or Tallahassee" />
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">Region</label>
-            <select id="filterRegion" class="form-select">
-              <option value="">All</option>
-              <option>West</option>
-              <option>Midwest</option>
-              <option>South</option>
-              <option>Northeast</option>
-            </select>
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">Sort By</label>
-            <select id="sortBy" class="form-select">
-              <option value="name">Name (A→Z)</option>
-              <option value="population">Population (desc)</option>
-              <option value="gdp">GDP (desc)</option>
-              <option value="area">Area (desc)</option>
-            </select>
-          </div>
-          <div class="col-md-2 d-grid">
-            <button class="btn btn-primary" id="refresh">Refresh</button>
-          </div>
-        </div>
+  <main class="py-5">
+    <div class="container">
+      <h2 class="h4 fw-bold mb-4">Current State Data</h2>
+
+      <div class="table-responsive card rounded-4">
+        <table class="table mb-0 align-middle">
+          <thead class="table-light">
+            <tr>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Region</th>
+              <th>Capital</th>
+              <th>Population</th>
+              <th>GDP</th>
+              <th>Area</th>
+              <th># Cities</th>
+            </tr>
+          </thead>
+          <tbody id="statesTableBody">
+            <!-- populated by refreshReadTable() -->
+          </tbody>
+        </table>
+      </div>
+
+      <p class="small-muted mt-3">
+        This table is powered by localStorage. Any Create / Update / Delete will change what you see here.
+      </p>
+
+      <div class="mt-4">
+        <a class="btn btn-sm btn-primary" href="create.html">Add New State</a>
+        <a class="btn btn-sm btn-outline-secondary" href="update.html">Edit State</a>
+        <a class="btn btn-sm btn-outline-danger" href="delete.html">Delete State</a>
       </div>
     </div>
+  </main>
 
-    <div class="table-responsive rounded-4 shadow-sm">
-      <table class="table align-middle mb-0">
-        <thead class="table-light">
-          <tr>
-            <th>State ID</th>
-            <th>Name</th>
-            <th>Region</th>
-            <th>Capital</th>
-            <th class="text-end">Population</th>
-            <th class="text-end">GDP (B)</th>
-            <th class="text-end">Area (sq mi)</th>
-            <th class="text-end">Cities</th>
-          </tr>
-        </thead>
-        <tbody id="rows"></tbody>
-      </table>
+  <footer class="py-4 border-top">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center">
+      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
+      <div class="small-muted">
+        <a href="index.html">Home</a> •
+        <a href="about.html">Team & ERD</a>
+      </div>
     </div>
-  </div>
+  </footer>
 
+  <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="assets/model.js"></script>
+  <script src="assets/controller.js"></script>
+  <script src="assets/charts.js"></script>
+  <script src="assets/api.js"></script>
   <script src="assets/app.js"></script>
+
   <script>
-    const rows = document.getElementById('rows');
-
-    function render() {
-      const q = document.getElementById('search').value.trim().toLowerCase();
-      const region = document.getElementById('filterRegion').value;
-      const sortBy = document.getElementById('sortBy').value;
-
-      let data = getStates();
-      if (q) {
-        data = data.filter(s => s.name.toLowerCase().includes(q) || s.capital.toLowerCase().includes(q));
-      }
-      if (region) data = data.filter(s => s.region === region);
-
-      const sorters = {
-        name: (a,b) => a.name.localeCompare(b.name),
-        population: (a,b) => b.population - a.population,
-        gdp: (a,b) => b.gdp - a.gdp,
-        area: (a,b) => b.area - a.area
-      };
-      data.sort(sorters[sortBy]);
-
-      rows.innerHTML = data.map(s => `
-        <tr>
-          <td><code>${s.id}</code></td>
-          <td>${s.name}</td>
-          <td>${s.region}</td>
-          <td>${s.capital}</td>
-          <td class="text-end">${s.population.toLocaleString()}</td>
-          <td class="text-end">${s.gdp.toLocaleString(undefined,{maximumFractionDigits:1})}</td>
-          <td class="text-end">${s.area.toLocaleString()}</td>
-          <td class="text-end">${s.citiesCount}</td>
-        </tr>
-      `).join('');
-    }
-
-    document.getElementById('refresh').onclick = render;
-    document.getElementById('search').oninput = render;
-    document.getElementById('filterRegion').onchange = render;
-    document.getElementById('sortBy').onchange = render;
-
-    render();
+    refreshReadTable();
   </script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-
+  <!-- Chat bubble -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/YOUR-BOTPRESS-CONFIG.js" defer></script>
 </body>
 </html>
