--- a/update.html
+++ b/update.html
@@ -1,76 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Update State — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Update State | US States Dashboard</title>
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+<body data-page="update">
+  <!-- Navbar -->
+  <nav class="navbar">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
-      <div id="navBar" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
-          <li class="nav-item"><a class="nav-link active" href="update.html">Update</a></li>
-          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        </ul>
-        <a class="btn btn-outline-light btn-sm" href="read.html">Back</a>
-      </div>
+      <div class="nav-brand">US States Dashboard</div>
+      <ul class="nav-links">
+        <li><a href="read.html">Data Table</a></li>
+        <li><a href="create.html">Create</a></li>
+        <li><a href="update.html" class="active">Update</a></li>
+        <li><a href="delete.html">Delete</a></li>
+        <li><a href="data.html">Charts</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
     </div>
   </nav>
 
   <main class="container py-4">
-    <div class="card p-4">
-      <h4 class="mb-3">Update State</h4>
-      <form id="updateForm" class="row g-3">
-        <div class="col-md-2"><label class="form-label">ID</label><input id="id" class="form-control" readonly/></div>
-        <div class="col-md-4"><label class="form-label">Name</label><input id="name" class="form-control" required/></div>
-        <div class="col-md-3">
-          <label class="form-label">Region</label>
-          <select id="region" class="form-select" required>
-            <option value="NE">Northeast</option>
-            <option value="MW">Midwest</option>
-            <option value="S">South</option>
-            <option value="W">West</option>
-          </select>
-        </div>
-        <div class="col-md-3"><label class="form-label">Capital</label><input id="capital" class="form-control" required/></div>
+    <h3 class="mb-3">Update State Information</h3>
 
-        <div class="col-md-3"><label class="form-label">Population</label><input id="population" type="number" min="0" class="form-control" required/></div>
-        <div class="col-md-3"><label class="form-label">GDP (USD)</label><input id="gdp" type="number" min="0" class="form-control" required/></div>
-        <div class="col-md-3"><label class="form-label">Area (km²)</label><input id="area" type="number" min="0" class="form-control" required/></div>
-        <div class="col-md-3"><label class="form-label"># Cities</label><input id="citiesCount" type="number" min="0" class="form-control" required/></div>
-
-        <div class="col-12 d-flex gap-2">
-          <button class="btn btn-accent" type="submit">Save Changes</button>
-          <a class="btn btn-outline-light" href="read.html">Cancel</a>
-        </div>
-      </form>
+    <!-- State Chooser -->
+    <div id="chooseContainer" class="card p-4 mb-3">
+      <h5 class="mb-2">Choose a state to edit</h5>
+      <div class="d-flex gap-2">
+        <select id="chooseId" class="form-select" style="max-width:360px"></select>
+        <button id="chooseBtn" class="btn btn-accent" type="button">Load</button>
+      </div>
     </div>
+
+    <!-- Update Form -->
+    <form id="updateForm" class="row g-3 d-none">
+      <div class="col-md-4">
+        <label for="id" class="form-label">State ID (2-Letter Code)</label>
+        <input type="text" id="id" name="id" class="form-control" readonly />
+      </div>
+      <div class="col-md-4">
+        <label for="name" class="form-label">State Name</label>
+        <input type="text" id="name" name="name" class="form-control" required />
+      </div>
+      <div class="col-md-4">
+        <label for="region" class="form-label">Region</label>
+        <select id="region" name="region" class="form-select" required>
+          <option value="">Select Region</option>
+          <option value="NE">Northeast</option>
+          <option value="MW">Midwest</option>
+          <option value="S">South</option>
+          <option value="W">West</option>
+        </select>
+      </div>
+
+      <div class="col-md-6">
+        <label for="capital" class="form-label">Capital</label>
+        <input type="text" id="capital" name="capital" class="form-control" />
+      </div>
+      <div class="col-md-6">
+        <label for="citiesCount" class="form-label">Number of Cities</label>
+        <input type="number" id="citiesCount" name="citiesCount" class="form-control" />
+      </div>
+
+      <div class="col-md-4">
+        <label for="population" class="form-label">Population</label>
+        <input type="number" id="population" name="population" class="form-control" />
+      </div>
+      <div class="col-md-4">
+        <label for="gdp" class="form-label">GDP (USD)</label>
+        <input type="number" id="gdp" name="gdp" class="form-control" />
+      </div>
+      <div class="col-md-4">
+        <label for="area" class="form-label">Land Area (km²)</label>
+        <input type="number" id="area" name="area" class="form-control" />
+      </div>
+
+      <div class="col-12 mt-3">
+        <button type="submit" class="btn btn-accent">Save Changes</button>
+        <a href="read.html" class="btn btn-outline-light">Cancel</a>
+      </div>
+    </form>
   </main>
 
-  <footer class="container py-4">
-    <div class="d-flex justify-content-between">
-      <span>© 2025 US States Dashboard</span>
-      <span class="text-muted-2">Update (CRUD U)</span>
-    </div>
+  <footer class="footer text-center py-3">
+    <small>© 2025 US States Dashboard</small>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <!-- Scripts -->
   <script type="module">
     import { initUpdatePage } from "./assets/controller.js";
     import "./assets/model.js";
     initUpdatePage();
   </script>
 
-  <!-- Botpress -->
+  <!-- Botpress chatbot (on every page) -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
