--- a/index.html
+++ b/index.html
@@ -1,92 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>US States Dashboard — Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>US States Dashboard</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
-<body>
-  <!-- Nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+<body data-page="home">
+  <nav class="navbar">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="navBar" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
-          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
-          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        </ul>
-        <a class="btn btn-outline-light btn-sm" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
-      </div>
+      <div class="nav-brand">US States Dashboard</div>
+      <ul class="nav-links">
+        <li><a href="read.html">Data Table</a></li>
+        <li><a href="create.html">Create</a></li>
+        <li><a href="update.html">Update</a></li>
+        <li><a href="delete.html">Delete</a></li>
+        <li><a href="data.html">Charts</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+      <a class="btn btn-outline-light" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank">GitHub</a>
     </div>
   </nav>
 
   <main class="container py-4">
-    <div class="row g-3 align-items-stretch">
-      <div class="col-md-4">
-        <div class="card p-3 h-100">
-          <h5 class="mb-1">Total Population</h5>
-          <div id="kpiTotalPop" class="display-6 fw-bold">—</div>
-          <div class="muted">Across all states in the dataset</div>
+    <div class="row g-3">
+      <div class="col-lg-4">
+        <div class="card p-4">
+          <h5>Total Population</h5>
+          <div class="display-5" id="kpiTotalPop">—</div>
+          <small class="text-muted-2">Across all states in the dataset</small>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card p-3 h-100">
-          <h5 class="mb-1">Total GDP</h5>
-          <div id="kpiTotalGDP" class="display-6 fw-bold">—</div>
-          <div class="muted">Aggregate (USD)</div>
+      <div class="col-lg-4">
+        <div class="card p-4">
+          <h5>Total GDP</h5>
+          <div class="display-5" id="kpiTotalGDP">—</div>
+          <small class="text-muted-2">Aggregate (USD)</small>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card p-3 h-100">
-          <h5 class="mb-1">Total Land Area</h5>
-          <div id="kpiTotalArea" class="display-6 fw-bold">—</div>
-          <div class="muted">km²</div>
+      <div class="col-lg-4">
+        <div class="card p-4">
+          <h5>Total Land Area</h5>
+          <div class="display-5" id="kpiTotalArea">—</div>
+          <small class="text-muted-2">km²</small>
         </div>
       </div>
     </div>
 
-    <div class="my-4" id="apiInsight"></div>
-
-    <div class="card p-4 mt-4">
-      <div class="d-flex justify-content-between align-items-center">
-        <h4 class="mb-0">Get Started</h4>
-        <a href="create.html" class="btn btn-accent">Add a State</a>
-      </div>
-      <p class="mt-3 text-muted-2">Use CRUD pages to manage records. Charts update automatically.</p>
+    <div class="card p-4 mt-3">
+      <h5>Get Started</h5>
+      <p class="muted">Use CRUD pages to manage records. Charts update automatically.</p>
+      <a href="create.html" class="btn btn-accent">Add a State</a>
     </div>
   </main>
 
-  <footer class="container py-4">
-    <div class="d-flex justify-content-between">
-      <span>© 2025 US States Dashboard</span>
-      <span class="text-muted-2">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
-    </div>
-  </footer>
+  <footer class="footer text-center py-3"><small>© 2025 US States Dashboard</small></footer>
+  <span class="text-muted-2">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
 
-  <!-- Libs -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js" defer></script>
-  <!-- App -->
-  <script type="module">
-    import { renderAllCharts } from "./assets/charts.js";
-    import { renderApiInsight } from "./assets/api.js";
-    import { initHomeKPIs } from "./assets/controller.js";
-    import "./assets/model.js"; // ensure DB loads
-    initHomeKPIs();
-    renderAllCharts();
-    renderApiInsight("apiInsight");
-  </script>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <script type="module" src="assets/controller.js"></script>
 
-  <!-- Botpress: on every page -->
+  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
